# aether-lang

./: .gitignore  Aether Programming Language.md  Cargo.toml  Contributing to Aether.md  Dockerfile  Project Governance for Aether.md  README.md  check_error_full.txt  check_output.txt  check_output_2.txt  roadmap.gantt.yml  roadmap.mmd
.github/workflows/: benchmark.yml  deploy-pages.yml  otel-compat.yml
aether-compiler/: Cargo.toml
aether-compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs
aether-compiler/tests/: error_tests.rs  run_command_tests.rs  snapshot_tests.rs
aether-compiler/tests/snapshots/: snapshot_tests__chained_flow_dag.snap  snapshot_tests__chained_flow_dag.snap.new  snapshot_tests__dag_metadata.snap  snapshot_tests__dag_metadata.snap.new  snapshot_tests__parallel_flow_dag.snap  snapshot_tests__parallel_flow_dag.snap.new  snapshot_tests__simple_sentiment_dag.snap  snapshot_tests__simple_sentiment_dag.snap.new  snapshot_tests__template_refs_metadata.snap
aether-core/: Cargo.toml
aether-core/src/: dag.rs  error.rs  lib.rs
aether-dag-visualizer/: index.html  package.json  pnpm-lock.yaml
aether-dag-visualizer/public/: sample_dag.json  sample_execution_result.json  sample_mixed_status_result.json
aether-dag-visualizer/src/: App.jsx
aether-runtime/: Cargo.toml
aether-runtime/benches/: runtime_benchmarks.rs
aether-runtime/docs/: telemetry.md
aether-runtime/src/: cache.rs  context.rs  lib.rs  llm.rs  main.rs  security.rs  telemetry.rs  template.rs
aether-runtime/tests/: integration_tests.rs
aether-runtime/tests/fixtures/: malicious_dag.json  test_dag_cache.json  test_dag_context.json  test_dag_parallel.json
bench/: README.md
bench/baselines/: README.md  dspy_baseline.py  langchain_baseline.py
bench/datasets/: README.md  customer_support_100.jsonl  document_analysis_50.jsonl
bench/lm-evaluation-harness/lm_eval/models/: aether_stub.py
docs/: benchmarks.md  compiler_status.md  index.html  runtime_status.md
docs/assets/: index-82qHF-fR.js  index-D9lo7Azu.css
docs/rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/rustdoc/aether_runtime/: all.html  fn.execute_dag.html  fn.execute_node.html  fn.health_check.html  fn.main.html  fn.metrics_handler.html  index.html  sidebar-items.js  struct.AppState.html  struct.Dag.html  struct.DagExecutionResponse.html  struct.DagNode.html  struct.ExecutionResult.html  struct.Metrics.html  struct.NodeExecutionResult.html
docs/rustdoc/aether_runtime/security/: enum.SecurityError.html  index.html  sidebar-items.js  struct.DefaultInputSanitizer.html  struct.SecurityConfig.html  struct.SecurityMiddleware.html  trait.InputSanitizer.html
docs/rustdoc/search.desc/aether_runtime/: aether_runtime-desc-0-.js
docs/rustdoc/src/aether_runtime/: main.rs.html  security.rs.html
docs/rustdoc/trait.impl/aether_runtime/security/: trait.InputSanitizer.js
docs/rustdoc/trait.impl/core/clone/: trait.Clone.js
docs/rustdoc/trait.impl/core/default/: trait.Default.js
docs/rustdoc/trait.impl/core/error/: trait.Error.js
docs/rustdoc/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/rustdoc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/rustdoc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/rustdoc/trait.impl/serde/de/: trait.Deserialize.js
docs/rustdoc/trait.impl/serde/ser/: trait.Serialize.js
examples/: chained_flow.aether  hello.aether  parallel_flow.aether  sentiment.aether
scripts/: run_benchmark.py
whitepaper/: CHANGELOG.md  TODO.md  WHITEPAPER.md  WHITEPAPER_ACADEMIC.md  aether-whitepaper-academic-changes.md  audit_mapping.md  benchmark_metrics.md
