[workspace]
resolver = "2"
members = [
    "aether-compiler",
    "aether-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Md. Sowad Al-Mughni"]
license = "MIT"
repository = "https://github.com/sowadalmughni/aether-lang"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
