[package]
name = "aether-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compiler for the Aether programming language - type-safe LLM orchestration"

[dependencies]
# Lexer
logos = "0.14"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { version = "7.0", features = ["fancy"] }

# Utilities
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json"] }
