[package]
name = "aether-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compiler for the Aether programming language - type-safe LLM orchestration"

[[bin]]
name = "aetherc"
path = "src/main.rs"

[dependencies]
# Internal crates
aether-core = { workspace = true }

# Lexer
logos = "0.14"

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { version = "7.0", features = ["fancy"] }

# HTTP client for runtime communication
reqwest = { version = "0.12", features = ["blocking", "json"] }
url = "2.5"

# Utilities
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json"] }
