[package]
name = "aether-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime execution engine for Aether - type-safe LLM orchestration"

[features]
default = []
# Enable real LLM API calls (OpenAI, Anthropic)
llm-api = ["reqwest"]

[dependencies]
# Internal crates
aether-core = { workspace = true }

tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
lru = "0.12"
sha2 = "0.10"
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
# opentelemetry-otlp temporarily removed to unblock build; will migrate later
prometheus = "0.13"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
regex = "1.10"

